--- a/CHANGELOG
+++ b/CHANGELOG
@@ -11,4 +11,7 @@ Change Log
 	- Add `likely()' and `unlikely()' macros to optimize.
 - v0.2.1: Memory Leak Fixes
 	- Fixed a major memory leak at the end of the program.
-	- Added more optimizers
+	- Added more optimizers.
+- v0.3: Optimizations
+	- Algorithm skips half the known primes.
+	- More accurate usage of `likely()' and `unlikely()' macros (aided by profiler).
