Set goal for v1.0

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -27,3 +27,4 @@ Change Log
 	- Allow user to choose base in which the prime numbers are printed.
 	- Give option for primes to be saved to a file upon exit.
 	- Free memory and leave instead of emergency exit.
+- v1.0: Parallel Computing
