Now using OpenMP for parallel programming and next version is v1.0

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -27,5 +27,7 @@ Change Log
 	- Allow user to choose base in which the prime numbers are printed.
 	- Give option for primes to be saved to a file upon exit.
 	- Free memory and leave instead of emergency exit.
-- v0.7: Additional Functionality
+- v1.0: Parallel Computing
+	- Have primes be computed in parallel for faster prime generation
 	- Allow user to save found primes to be loaded later.
+	- User can save and read primes in raw output.
