--- a/CHANGELOG
+++ b/CHANGELOG
@@ -27,6 +27,6 @@ Change Log
 	- Allow user to choose base in which the prime numbers are printed.
 	- Give option for primes to be saved to a file upon exit.
 	- Free memory and leave instead of emergency exit.
-- v0.7: Parallel Computing
+- v0.7: Data Saving
 	- Allow user to save found primes to be loaded later.
 	- User can save and read primes in raw output.
